# LDPS

./: .gitignore  README.md  build.sh  ldps  pyproject.toml  setup.cfg
control/: control  postinst
ldps/: cli.py
src/ldps/: cli.py  utils.py
update/: README.md  wezterm-nightly.py  wezterm.py  zoom.py
