[metadata]
name = ldps
version = 0.0.1
author = Jacky Guo
author_email = jackyguo18@hotmail.com
description = Local package repository for Debian GNU/Linux and derivatives
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jgcodes2020/ldps
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
	Operating System :: POSIX :: Linux

[options]
package_dir = 
	= src

packages = find:
python_requires = >=3.9

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
	ldps = ldps.cli:main